--- a/src/App.scss
+++ b/src/App.scss
@@ -8,18 +8,19 @@
   background-color: #e7f7fd;
   display: flex;
   height: 60px;
-  justify-content: space-between;
-  position: relative;
   align-items: center;
+  position: relative;
   
   &__title{
     font-size: 1.5em;
-    margin-left: 160px;
+    width: 530px;
     display: inline-block;
     font-weight: bold;  
+    margin: 0 auto;
   }
   &__nab{
-   margin-right: 20px;
+    position: absolute;
+    right: 20px;
    .sign_up{
     border-radius: 100px;
   }
@@ -37,7 +38,7 @@
 .said{
   border: 1px solid black;
   height: 100%;
-  width: 250px;
+  width: 300px;
   border-radius: 15px;
   overflow: scroll;
   &__box{
@@ -46,6 +47,13 @@
     border: 1px solid black;
     margin-bottom: 2px;
     border-radius: 15px;
+    cursor: pointer;
+    transition: transform 1s;
+    margin: 10px;
+    &:hover {
+      transform: scale(1,1.3);
+
+    }
     .said-image{
       height: 100%;
       width: 25%;
@@ -72,6 +80,7 @@
     display: flex;
     border-radius: 15px;
     overflow: hidden;
+    cursor: pointer;
     &__image{
       height: 150px;
       width: 150px;
