--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,43 @@
   
 }
 
+.right{
+  border: 1px solid black;
+  height: 100%;
+  width: 300px;
+  border-radius: 15px;
+  overflow: scroll;
+  &__box{
+    display: flex;
+    height: 60px;
+    border: 1px solid black;
+    margin-bottom: 2px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: transform 1s;
+    margin: 10px;
+    &:hover {
+      transform: scale(1,1.3);
+
+    }
+    .right-image{
+      height: 100%;
+      width: 25%;
+      border-radius: 15px;
+    }
+    .right-content{
+      font-size: 15px;
+      padding: 5px;
+    }
+
+  }
+}
+
+
+
+
+
+
 .tako{
   height: 150px;
   width: 150px;
