--- a/src/App.scss
+++ b/src/App.scss
@@ -79,6 +79,10 @@
   border-radius: 15px;
   height: 100%;
   overflow: scroll;
+  .kizi-link{
+    text-decoration: none;
+    color: black;
+  }
   .contents{
     height: 150px;
     border: 1px solid black;
