--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -157,6 +157,10 @@
 }
 
 .api{
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
+  display: block;
+  text-decoration: none;
+  color: black;
+
 }
