--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -53,6 +53,7 @@
     border: 1px solid black;
     margin-bottom: 2px;
     border-radius: 15px;
+    overflow: hidden;
     cursor: pointer;
     transition: transform 1s;
     margin: 10px;
