--- a/src/scss/memo.scss
+++ b/src/scss/memo.scss
@@ -5,14 +5,14 @@
 .ma__content{
   width: 800px;
   margin: 0 auto;
-  border: 2px double #87ceeb ;
+  border: 0.5px double black ;
   display: flex;
 }
 .ma{
   width: 50%;
   display: flex;
   flex-direction: column;
-  border: double skyblue;
+  border: 0.5px solid black;
   &__title{
   font-weight: bold;
   }
