--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -101,6 +101,7 @@ $back-color: white;
   height: 100%;
   overflow: scroll;
   background-color: white;
+  flex: 1;
   .kizi-link{
     text-decoration: none;
     color: black;
